Testcases fixed