@@ -21,15 +21,9 @@ import junit.framework.TestCase;
  * @author Peter Hirzel, softEnvironment GmbH
  */
 public class DataBrowserTestCase extends TestCase {
-    private DataBrowser browser = null;
     
-    public void setUp() {
-        browser = new DataBrowser();
-    }
-    public void tearDown() {
-        browser = null;
-    }
-    public void testEmptyBrowsing() {        
+    public void testEmptyBrowsing() {
+    	DataBrowser<Object> browser = new DataBrowser<Object>();
         assertFalse(browser.isScrollNextAllowed());
         assertFalse(browser.isScrollPreviousAllowed());
         assertFalse(browser.isScrollLastAllowed());
@@ -55,7 +49,8 @@ public class DataBrowserTestCase extends TestCase {
         assertTrue(browser.getFirst() == null);
         assertTrue(browser.getLast() == null);
     }
-    public void testSingleBrowsing() {      
+    public void testSingleBrowsing() {  
+    	DataBrowser<String> browser = new DataBrowser<String>();
         List<String> list = new ArrayList<String>();
         list.add("Hello");
         browser.setObjects(list);
@@ -74,7 +69,8 @@ public class DataBrowserTestCase extends TestCase {
         assertTrue(browser.getFirst().equals("Hello"));
         assertTrue(browser.getLast().equals("Hello"));
     }
-    public void testMultiBrowsing() {      
+    public void testMultiBrowsing() {
+    	DataBrowser<String> browser = new DataBrowser<String>();
         List<String> list = new ArrayList<String>();
         list.add("Hello");
         list.add("World");
@@ -134,13 +130,14 @@ public class DataBrowserTestCase extends TestCase {
         assertTrue(browser.isScrollFirstAllowed());
     }
     public void testStepEven() {
+    	DataBrowser<Integer> browser = new DataBrowser<Integer>();
         browser.setStep(10);
         assertTrue(browser.getCurrentIndex() == -1);
         assertTrue(browser.getCurrentObject() == null);
         
         List<Integer> objects = new java.util.ArrayList<Integer>(20);
         for (int i=0; i<20; i++) {
-            objects.add(new Integer(i));
+            objects.add(Integer.valueOf(i));
         }
         browser.setObjects(objects);
         browser.setCurrentIndex(0);
@@ -155,7 +152,7 @@ public class DataBrowserTestCase extends TestCase {
         
         for (int i=20; i<40; i++) {
             // add another 20 objects
-            objects.add(new Integer(i));
+            objects.add(Integer.valueOf(i));
         }
         browser.getFirst();
         assertTrue(browser.getCurrentIndex() == 0);
@@ -172,7 +169,7 @@ public class DataBrowserTestCase extends TestCase {
         
         objects = new java.util.ArrayList<Integer>();
         for (int i=1; i<106; i++) {
-            objects.add(new Integer(i));
+            objects.add(Integer.valueOf(i));
         }
         browser.setObjects(objects);
         assertTrue(browser.isScrollNextAllowed());
@@ -180,49 +177,50 @@ public class DataBrowserTestCase extends TestCase {
         assertTrue(browser.isScrollLastAllowed());
         assertFalse(browser.isScrollFirstAllowed());        
         assertTrue(browser.getCurrentIndex() == 0);
-        assertTrue(browser.getCurrentObject().equals(new Integer(1)));
+        assertTrue(browser.getCurrentObject().equals(Integer.valueOf(1)));
         
-        assertTrue(browser.getNext().equals(new Integer(11)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(11)));
         assertTrue(browser.isScrollNextAllowed());
         assertTrue(browser.isScrollPreviousAllowed());
         assertTrue(browser.isScrollLastAllowed());
         assertTrue(browser.isScrollFirstAllowed());          
         assertTrue(browser.getCurrentIndex() == 10);
-        assertTrue(browser.getCurrentObject().equals(new Integer(11)));
+        assertTrue(browser.getCurrentObject().equals(Integer.valueOf(11)));
         
-        assertTrue(browser.getPrevious().equals(new Integer(1)));
+        assertTrue(browser.getPrevious().equals(Integer.valueOf(1)));
         assertTrue(browser.isScrollNextAllowed());
         assertFalse(browser.isScrollPreviousAllowed());
         assertTrue(browser.isScrollLastAllowed());
         assertFalse(browser.isScrollFirstAllowed());          
         assertTrue(browser.getCurrentIndex() == 0);
-        assertTrue(browser.getCurrentObject().equals(new Integer(1)));
+        assertTrue(browser.getCurrentObject().equals(Integer.valueOf(1)));
         
-        assertTrue(browser.getNext().equals(new Integer(11)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(11)));
         assertTrue(browser.getCurrentIndex() == 10);
-        assertTrue(browser.getNext().equals(new Integer(21)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(21)));
         assertTrue(browser.getCurrentIndex() == 20);
-        assertTrue(browser.getNext().equals(new Integer(31)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(31)));
         assertTrue(browser.getCurrentIndex() == 30);
-        assertTrue(browser.getPrevious().equals(new Integer(21)));
+        assertTrue(browser.getPrevious().equals(Integer.valueOf(21)));
         assertTrue(browser.getCurrentIndex() == 20);                
                 
-        assertTrue("beginning of last block", browser.getLast().equals(new Integer(101)));
+        assertTrue("beginning of last block", browser.getLast().equals(Integer.valueOf(101)));
         assertTrue(browser.getCurrentIndex() == 100);
         assertFalse("though index not on last element, there is no next block", browser.isScrollNextAllowed());
         assertFalse("no next block", browser.isScrollLastAllowed());
         
-        assertTrue("first block", browser.getFirst().equals(new Integer(1)));
+        assertTrue("first block", browser.getFirst().equals(Integer.valueOf(1)));
         assertTrue(browser.getCurrentIndex() == 0);
     }
     public void testStepOdd5() {
+    	DataBrowser<Integer> browser = new DataBrowser<Integer>();
         browser.setStep(5);
         assertTrue(browser.getCurrentIndex() == -1);
         assertTrue(browser.getCurrentObject() == null);
         
         List<Integer> objects = new java.util.ArrayList<Integer>(10);
         for (int i=0; i<10; i++) {
-            objects.add(new Integer(i));
+            objects.add(Integer.valueOf(i));
         }
         browser.setObjects(objects);
         browser.setCurrentIndex(0);
@@ -230,7 +228,7 @@ public class DataBrowserTestCase extends TestCase {
         assertTrue("step is one behind last => correction", browser.getCurrentIndex() == 9);
         for (int i=10; i<20; i++) {
             // add another 10 objects
-            objects.add(new Integer(i));
+            objects.add(Integer.valueOf(i));
         }
         browser.getFirst();
         assertTrue(browser.getCurrentIndex() == 0);
@@ -246,13 +244,14 @@ public class DataBrowserTestCase extends TestCase {
         assertTrue("step is one behind last => correction", browser.getCurrentIndex() == 19);
     }
     public void testStepOdd3() {
+    	DataBrowser<Integer> browser = new DataBrowser<Integer>();
         browser.setStep(3);
         assertTrue(browser.getCurrentIndex() == -1);
         assertTrue(browser.getCurrentObject() == null);
         
         java.util.List<Integer> objects = new java.util.ArrayList<Integer>();
         for (int i=1; i<101; i++) {
-            objects.add(new Integer(i));
+            objects.add(Integer.valueOf(i));
         }
         browser.setObjects(objects);
         assertTrue(browser.isScrollNextAllowed());
@@ -260,54 +259,55 @@ public class DataBrowserTestCase extends TestCase {
         assertTrue(browser.isScrollLastAllowed());
         assertFalse(browser.isScrollFirstAllowed());        
         assertTrue(browser.getCurrentIndex() == 0);
-        assertTrue(browser.getCurrentObject().equals(new Integer(1)));
+        assertTrue(browser.getCurrentObject().equals(Integer.valueOf(1)));
         
-        assertTrue(browser.getNext().equals(new Integer(4)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(4)));
         assertTrue(browser.isScrollNextAllowed());
         assertTrue(browser.isScrollPreviousAllowed());
         assertTrue(browser.isScrollLastAllowed());
         assertTrue(browser.isScrollFirstAllowed());          
         assertTrue(browser.getCurrentIndex() == 3);
-        assertTrue(browser.getCurrentObject().equals(new Integer(4)));
+        assertTrue(browser.getCurrentObject().equals(Integer.valueOf(4)));
         
-        assertTrue(browser.getPrevious().equals(new Integer(1)));
+        assertTrue(browser.getPrevious().equals(Integer.valueOf(1)));
         assertTrue(browser.isScrollNextAllowed());
         assertFalse(browser.isScrollPreviousAllowed());
         assertTrue(browser.isScrollLastAllowed());
         assertFalse(browser.isScrollFirstAllowed());          
         assertTrue(browser.getCurrentIndex() == 0);
-        assertTrue(browser.getCurrentObject().equals(new Integer(1)));
+        assertTrue(browser.getCurrentObject().equals(Integer.valueOf(1)));
         
-        assertTrue(browser.getNext().equals(new Integer(4)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(4)));
         assertTrue(browser.getCurrentIndex() == 3);
-        assertTrue(browser.getNext().equals(new Integer(7)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(7)));
         assertTrue(browser.getCurrentIndex() == 6);
-        assertTrue(browser.getNext().equals(new Integer(10)));
+        assertTrue(browser.getNext().equals(Integer.valueOf(10)));
         assertTrue(browser.getCurrentIndex() == 9);
-        assertTrue(browser.getPrevious().equals(new Integer(7)));
+        assertTrue(browser.getPrevious().equals(Integer.valueOf(7)));
         assertTrue(browser.getCurrentIndex() == 6);                
                 
-        assertTrue("beginning of last block", browser.getLast().equals(new Integer(99)));
+        assertTrue("beginning of last block", browser.getLast().equals(Integer.valueOf(99)));
         assertTrue(browser.getCurrentIndex() == 98);
         assertFalse("though index not on last element, there is no next block", browser.isScrollNextAllowed());
         assertFalse("no next block", browser.isScrollLastAllowed());
         
-        assertTrue("first block", browser.getFirst().equals(new Integer(1)));
+        assertTrue("first block", browser.getFirst().equals(Integer.valueOf(1)));
         assertTrue(browser.getCurrentIndex() == 0);                      
     }
     public void testSetCurrentIndex() {
+    	DataBrowser<Integer> browser = new DataBrowser<Integer>();
         browser.setStep(10);
         assertTrue(browser.getCurrentIndex() == -1);
         assertTrue(browser.getCurrentObject() == null);
         
         java.util.List<Integer> objects = new java.util.ArrayList<Integer>(100);
         for (int i=1; i<106; i++) {
-            objects.add(new Integer(i));
+            objects.add(Integer.valueOf(i));
         }
         browser.setObjects(objects);
                 
         browser.setCurrentIndex(89);
-        assertTrue(browser.getCurrentObject().equals(new Integer(90)));
+        assertTrue(browser.getCurrentObject().equals(Integer.valueOf(90)));
         
 //TODO what happens at #getNext/Previous() if step>1 (stay in step or next/previous from currentIndex?)
     }
