@@ -27,7 +27,7 @@ public class StringUtilsTestCase extends junit.framework.TestCase {
 
 		// getString(Object)
 		assertTrue("StringUtils.getString(null)", "".equals(ch.softenvironment.util.StringUtils.getString((Object)null)));
-		assertTrue("StringUtils.getString(17)", "17".equals(ch.softenvironment.util.StringUtils.getString(new Integer(17))));
+		assertTrue("StringUtils.getString(17)", "17".equals(ch.softenvironment.util.StringUtils.getString(Integer.valueOf(17))));
 		assertTrue("StringUtils.getString(-23.45)", "-23.45".equals(ch.softenvironment.util.StringUtils.getString(new Double(-23.45))));
 		assertTrue("StringUtils.getString(Boolean.TRUE)",
 				ResourceManager.getResource(StringUtils.class, "CI_Yes_text").equals(ch.softenvironment.util.StringUtils.getString(Boolean.TRUE)));
